removed stat button to make it less confusing

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 	<p></p>
 	<p class="col-md-12"> This site was created by a <strong>victim</strong> to consolidate these complaints and create a running tally for how much money people say has been stolen from them by these two individuals.</p>
 	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfRWgU_Pz-aOwZpM0K7zZtUvzgh50cvGEaLdT_AOzOaG8Ap6A/viewform?usp=sf_link" class="btn btn-danger btn-lg" target="_blank" role="button">Add your report to the list</a>
-	<span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="I need to enter in all the data from the linked Excel sheet before the stats become visually useful">
+	<!-- span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="I need to enter in all the data from the linked Excel sheet before the stats become visually useful">
 	  <button type="button" style="pointer-events: none;" class="btn btn-primary btn-lg" disabled >View report stats</button>
-	</span>
+	</span -->
 	<!-- a href="https://docs.google.com/forms/d/1v14-6y_BOgaX23CLAC_bzBVIQnz1p7GDjnnSTMTSDb0/viewanalytics" class="btn btn-primary btn-lg" target="_blank" diabled tooltip="I need to enter in all the data from the linked Excel sheet before the stats become visually useful" role="button">View report stats</a -->
       </div>
     </div>
@@ -139,7 +139,7 @@
               <p class="card-text"><table class="table">
 			<tr><th style="width: 60%"></th><th style="width: 40%"></th></tr>	
 			<tr><td>Most Recent Complaint:</td><td>12/10/2021</td></tr>
-			<tr><td>Total Reviews:</td><td>The original GoogleMap Condor Fencing with 15+ years of acceptable service no longer exists<br/>6 '5' Star Reviews [3 Matched to Facebook Friends]<br/>1 '2' Star Review in 2004 for quality<br/>55 '1' Star Reviews</td></tr>
+			<tr><td>Total Reviews:</td><td>The original GoogleMap Condor Fencing with 15+ years of service no longer exists (Presumably taken down due to negative reviews)<br/>6 '5' Star Reviews [3 Matched to Facebook Friends]<br/>1 '2' Star Review in 2004 for quality<br/>55 '1' Star Reviews</td></tr>
 			<tr><td>Unique Fraud Cases:</td><td>16 (Eventual $700 refund reduced it to 16 from 17 due to a Police Report)</td></tr>
 			<tr><td>Unique Poor/Partial Service or Quality Cases:</td><td>20 (At leaset 12 seeking Damages)</td></tr>
 			<tr><td>Police Reports:</td><td>6</td></tr>
@@ -173,7 +173,7 @@
 			<tr><th style="width: 60%"></th><th style="width: 40%"></th></tr>	
 			<tr><td>Status:</td><td>Inactive</td></tr>
 			<tr><td>Most Recent Complaint:</td><td>06/2020</td></tr>
-			<tr><td>Total Reviews:</td><td>The original GoogleMap Condor Fencing with 15+ years of acceptable service no longer exists<br/>6 '5' Star Reviews [3 Matched to Facebook Friends]<br/>1 '2' Star Review in 2004 for quality<br/>38 '1' Star Reviews</td></tr>
+			<tr><td>Total Reviews:</td><td>The original GoogleMap Condor Fencing with 15+ years of service no longer exists (Presumably taken down due to negative reviews)<br/>6 '5' Star Reviews [3 Matched to Facebook Friends]<br/>1 '2' Star Review in 2004 for quality<br/>38 '1' Star Reviews</td></tr>
 			<tr><td>Unique Fraud Cases:</td><td>12 (Stopped Payment reduced it to 12 from 13: Shawn Threatened Lien)</td></tr>
 			<tr><td>Unique Poor/Partial Service or Quality Cases:</td><td>17 (7 seeking damages)</td></tr>
 			<tr><td>Police Reports:</td><td>3</td></tr>
