ensured that the numbers add up and are presented accurately

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<tr><td>Unique Poor/Partial Service or Quality Cases:</td><td>20 (At leaset 12 seeking Damages)</td></tr>
 			<tr><td>Police Reports:</td><td>6</td></tr>
 			<tr><td>Estimated Dollar Amount Sought for Quality/Warrenty/Damage Issues<br/>(Adding up $ in reviews):</td><td>$41,461</td></tr>
-			<tr><td>Estimated Dollar Amount Stolen (Adding up $ in reviews):</td><td>$61,197 ($3000 recoverd via American Express)</td></tr>
+			<tr><td>Estimated Dollar Amount Stolen (Adding up $ in reviews):</td><td>$61,197 ($3000 recoverd via American Express & $5700 eventually Refunded)</td></tr>
 			<tr><td>Estimated Dollar Amount Returned Voluntarally (Adding up $ in reviews):</td><td>$5,700</td></tr>
 			<tr><td>Estimated Dollar Amount Recovered Via LIENs (Adding up $ in reviews):</td><td>$8,650 (2 amounts known out of 4 known liens)</td></tr>
 			<tr><td>Total Active Judgements against Partian (From Public Records):</td><td>$20,349</td></tr>
