chart and consistent name

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
     <div class="p-8 mb-4 rounded-3">
       <div class="container-fluid py-5">
         <h3 class="display-8 fw-bold">Summary of all Complaints (64 as of 12/05/2021)</h3>
-       <p class="col-md-10 fs-4">Partain &amp; Zantana have total of 10 company names, although it seems only 4 were active in fencing and fraud.</p>
+       <p class="col-md-10 fs-4">Partain &amp; Tapia have a total of 10 company names, although it seems only 4 were active in fencing and fraud.</p>
 	<p class="col-md-12">Near 2018 Partain's comany's quality seemed to take a sharp dive and they began transitioning to new names as the bad reputation spread. The most prevalent complaint is delays and only partial work with little to no communication. The ratio of stealing deposits compaired to partial work seemed to have been increasing since the issues started, and is now the most often complaint.</p>
 	<p class="col-md-12">There was a total of 64 self reported complaints (as of 12/05/2021 [62 Reviews + 2 Unmatched Liens]), each are linked an consolidated in the source links below. <strong>At least $52,497 was stolen from 16 families</strong> by taking deposits and never initiating work. <strong>At least $41,461 in Damages and incomplete work is sought by 12 families.</strong> At the very minimum <strong>$93,958 is wanted by 28 families</strong> for theft, as well as issues due to partial work, poor quality, and warrenty work. This is only the reported cases, there may be many more cases invovling less computer literate consumers.</p>        
 
 	<div class="card-columns">
           <div class="card bg-light">
             <div class="card-body">
-	     <img class="card-img-top" src="./images/stolenFull.svg" alt="Card image cap">
+	     <img class="card-img-top" src="./images/stolen.svg" alt="Card image cap">
               <p class="card-text"><table class="table">
 			<tr><th style="width: 60%"></th><th style="width: 40%"></th></tr>	
 			<tr><td>Most Recent Complaint:</td><td>12/10/2021</td></tr>
