Update chart again with better series labels & fixed complaint counts

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 			<tr><td>Estimated Dollar Amount Recovered Via LIENs (Adding up $ in reviews):</td><td>$8,650 (2 amounts known out of 4 known liens)</td></tr>
 			<tr><td>Total Active Judgements against Partian (From Public Records):</td><td>$20,349</td></tr>
 			</table></p>
-              <a href="https://www.bbb.org/us/tx/midlothian/profile/fence-contractors/condor-fencing-0875-90117060" target="_blank" class="card-link">BBB (9) +1 Pending</a>
+              <a href="https://www.bbb.org/us/tx/midlothian/profile/fence-contractors/condor-fencing-0875-90117060" target="_blank" class="card-link">BBB (9)</a>
               <a href="https://www.buildzoom.com/contractor/condor-fencing-midlothian-tx" target="_blank" class="card-link">Buildzoom</a>
               <a href="https://www.yelp.com/biz/condor-fencing-mansfield" target="_blank" class="card-link">Yelp (27)</a>
               <a href="https://www.angi.com/companylist/us/tx/addison/condor-fencing-reviews-125984.htm" target="_blank" class="card-link">Angie (2)</a>
